@startuml Flicacha_MER

entity users {
  PK user_id        : BIGINT
  --
  name              : VARCHAR(30) <<UNIQUE>>
  email             : VARCHAR(50) <<UNIQUE>>
  password_hash     : VARCHAR(255)
  avatar_url        : VARCHAR(500)
  is_active         : BOOLEAN
  created_at        : TIMESTAMPTZ
  updated_at        : TIMESTAMPTZ
}

entity posts {
  PK post_id        : BIGINT
  --
  FK user_id        : BIGINT
  content           : VARCHAR(280)
  is_visible        : BOOLEAN
  created_at        : TIMESTAMPTZ
  updated_at        : TIMESTAMPTZ
}
entity hashtags {
  PK hashtag_id     : BIGINT
  --
  tag               : NVARCHAR(100) <<UNIQUE>>
  created_at        : DATETIME2
}
entity post_hashtags {
  PK FK post_id     : BIGINT
  PK FK hashtag_id  : BIGINT
}

entity comments {
  PK comment_id     : BIGINT
  --
  FK post_id        : BIGINT
  FK user_id        : BIGINT
  content           : VARCHAR(500)
  created_at        : TIMESTAMPTZ
}

entity notifications {
  PK notification_id : BIGINT
  --
  FK user_id         : BIGINT
  FK actor_id        : BIGINT
  type               : VARCHAR(30)
  reference_id       : BIGINT
  is_read            : BOOLEAN
  created_at         : TIMESTAMPTZ
}

entity media_files {
  PK media_id       : BIGINT
  --
  FK post_id        : BIGINT
  url               : VARCHAR(500)
  media_type        : VARCHAR(20)
  created_at        : TIMESTAMPTZ
}

entity post_likes {
  PK FK user_id     : BIGINT
  PK FK post_id     : BIGINT
  --
  created_at        : TIMESTAMPTZ
}

entity user_follows {
  PK FK follower_id  : BIGINT
  PK FK following_id : BIGINT
  --
  created_at         : TIMESTAMPTZ
}

entity comment_likes {
  PK FK user_id     : BIGINT
  PK FK comment_id  : BIGINT
  --
  created_at        : TIMESTAMPTZ
}

users        ||--o{ posts          : ""
users        ||--o{ comments       : ""
users        ||--o{ notifications  : ""
posts        ||--o{ comments       : ""
posts        ||--o{ media_files    : ""

users        ||--o{ post_likes     : ""
posts        ||--o{ post_likes     : ""

users        ||--o{ user_follows   : ""

users        ||--o{ comment_likes  : ""
comments     ||--o{ comment_likes  : ""

posts        ||--o{ post_hashtags  : ""
hashtags     ||--o{ post_hashtags  : ""

@enduml 